fixed the horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  maargin:0;
+  padding:0;
+  box-sizing:border-box;
+}
 .icons {
   @apply text-2xl sm:text-3xl m-2;
  
